src/objects/Arm__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Generic_Name__c</fullName>
        <label>Generic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Id</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Arms</relationshipLabel>
        <relationshipName>Arms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Id</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>Arms</relationshipLabel>
        <relationshipName>Arms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Arm</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Arm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>